fixed bug causing each project card to be in their own row, fixed horizontal scroll on mobile view

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
   font-family: "Roboto Mono", monospace;
   margin: 100%;
   margin: 0;
+  width: 100vw;
 }
 
 textarea {
@@ -114,6 +115,12 @@ li {
   background-color: #212529;
 }
 
+.test {
+  margin-inline: 0;
+}
+
 @media screen and (min-width: 300px) {
-  body { padding-top: 120px; }
+  body { 
+    padding-top: 120px; 
+  }
 }
